--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "vanilla-js-es6-components",
+  "author": "Dave",
   "version": "1.0.0",
   "description": "vanilla js es6 class component tesst",
   "main": "index.js",
+  "files": [
+    "dist/"
+  ],
   "devDependencies": {
+    "autoprefixer": "^9.8.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-builtin-classes": "^0.6.1",
@@ -11,19 +16,33 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
+    "extract-loader": "^5.1.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-include-assets-plugin": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-manifest-plugin": "^2.2.0",
+    "extract-text-webpack-plugin": "^3.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "serve:httpserver": "npm run watch & http-server -P https://es6-components-iamwillll.c9users.io/",
     "serve:webpack": "webpack-dev-server --open",
+    "serve": "cd build && http-server",
     "watch": "webpack --watch"
   },
-  "author": "William Pei Yuan",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  }
 }
